styles.css
* {
  margin: 0;
  padding: 0;
}

:root {
  /* COLORS */
  --background: #fff0d5;
  --card-background: #ffe3af;
  --yellow: #ffa600;
  --yellow-dark: #d68306;

  --accent: #f506ff;
  --text-color: #231d24;
  --text-color-light: #585851;

  /* FONT WEIGHTS */
  --text-regular: 500;
  --text-bold: 700;

  /* LETTER SPACING */
  --spacing-normal: 1em;
  --spacing-eyebrow: 0.1em;
}

html {
  scroll-behavior: smooth;
  color-scheme: light;
}

body {
  background-color: var(--background);
  font-family: "Sofia Sans", sans-serif;
  font-weight: var(--text-regular);
  font-size: 1rem;
}

a {
  text-decoration: none;
  color: inherit;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: clamp(320px, 90%, 1200px);
}

h1,
h2,
h3 {
  font-family: "Syncopate", sans-serif;
  font-weight: 700;
}

h1 {
  text-transform: uppercase;
  font-size: clamp(2rem, 5vw + 1rem, 6rem);
  max-width: 8ch;
  text-align: center;
  line-height: 80%;
  margin-bottom: 0.2em;
}

h2 {
  text-transform: uppercase;
  font-size: clamp(1.5rem, 5vw + 1rem, 3rem);
}

h3 {
  font-size: clamp(1rem, 5vw + 1rem, 1.5rem);
}

main {
  z-index: 0;
  display: flex;
  flex-direction: column;
  gap: 6rem;
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--background);
}

section > div {
  width: clamp(320px, 90%, 1200px);
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-block: 5dvh;
  background-color: var(--yellow);
}
.parallax {
  display: grid;
  grid-template-areas: "stack";
  justify-content: center;
  position: relative;
  z-index: 2;
  width: 100%;
  contain: paint;
  background-image: linear-gradient(
    var(--background),
    white 90%,
    var(--yellow) 90%
  );
}

.parallax > * {
  contain: full;
  grid-area: stack;
  animation: parallax linear;
  animation-timeline: scroll();
}

.parallax > img {
  width: clamp(700px, 80dvw, 1800px);
}

.parallax__01 {
  z-index: 4;
  --parallax-speed: 0.5;
}

.parallax__02 {
  z-index: 3;
  --parallax-speed: 20;
}

.parallax__03 {
  z-index: 2;
  --parallax-speed: 50;
}

.parallax__04 {
  z-index: 1;
  --parallax-speed: 60;
}

@keyframes parallax {
  to {
    transform: translateY(calc(var(--parallax-speed) * 20px));
  }
}

.navbar {
  background-color: var(--background);
  display: flex;
  justify-content: center;
  position: sticky;
  top: 0;

  padding-block: 0.5rem;
  z-index: 5;
}

.links-container {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.nav_links {
  list-style: none;
  display: flex;
  flex-direction: row;
  gap: 0.2rem;
  font-size: 1.2rem;
  text-transform: uppercase;
}

.nav_links li {
  padding: 0.5rem 2rem;
  transition: 200ms;
  border-radius: 10px;
  font-weight: var(--text-bold);
  color: var(--yellow-dark);
}

.nav_links li:hover {
  background-color: var(--yellow);
  color: var(--text-color);
}

#sidebar-active {
  display: none;
}

.open-sidebar-button,
.close-sidebar-button {
  padding: 0 20px;
  display: none;
}

@media (max-width: 750px) {
  .nav_links {
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;

    position: fixed;
    top: 0;
    right: -100%;
    gap: 1em;
    z-index: 10;
    width: 200px;
    padding: 10px 1em 2em 1em;

    background-color: var(--text-color);
    transition: 0.5s ease-in-out;
  }

  #sidebar-active:checked ~ .overlay {
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9;
  }

  .nav_links li {
    width: 100%;
  }

  .open-sidebar-button,
  .close-sidebar-button {
    padding: 20px;
    display: block;
  }

  #sidebar-active:checked ~ .nav_links {
    right: 0;
  }
}

.resume {
  background-image: linear-gradient(var(--yellow), var(--background));
}

.introduction {
  display: flex;
  flex-direction: column;
  padding-block: 6rem;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;
}

.about {
  text-align: center;
  max-width: 72ch;
}

.socials {
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.socials li {
  background-color: var(--accent);
  padding: 0.5em 3em;
  border-radius: 10px;
  color: white;
}

.topics {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 1.5em;
}

.eyebrow {
  color: var(--accent);
  text-transform: uppercase;
  font-weight: var(--text-bold);
  letter-spacing: var(--spacing-eyebrow);
  font-size: 1.2rem;
  margin-bottom: 0.3rem;
}

.experience {
  display: grid;
  grid-auto-flow: column;
  width: 100%;
  gap: 1rem;
  overflow-x: auto;
  padding-block: 2rem;
  justify-content: start;
  position: relative;

  scrollbar-color: var(--yellow) var(--card-background);
}

.experience::before {
  content: "SCROLL FOR MORE \27F6";
  position: absolute;
  bottom: 0.5rem;
  right: 0;
  color: var(--yellow);
  font-size: 0.85rem;
  font-weight: var(--text-bold);
}

.experience::-webkit-scrollbar {
  height: 0.75rem;
}

.experience::-webkit-scrollbar-track {
  background-color: var(--card-background);
  border-radius: 100vw;
}

.experience::-webkit-scrollbar-thumb {
  background-color: var(--yellow);
  border-radius: 100vw;
}

.experience-card {
  width: clamp(16rem, 60dvw, 32rem);
  padding: 2rem;
  border-radius: 20px;
  background-color: var(--card-background);
  border: 2px solid var(--yellow);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.date {
  color: var(--accent);
  text-transform: uppercase;
  font-style: italic;
  font-size: 0.8rem;
  letter-spacing: var(--spacing-eyebrow);
}

.company {
  text-transform: uppercase;
  letter-spacing: var(--spacing-eyebrow);
}

.task {
  list-style: none;
  padding-left: 1rem;
  border-left: 3px solid var(--yellow);
  color: var(--text-color-light);
}

.task li {
  margin-bottom: 0.4rem;
}

.details {
  max-width: 72ch;
  color: var(--text-color-light);
}

.skills-list {
  text-transform: uppercase;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  width: clamp(320px, 90%, 1200px);
}

.skills-list li {
  background-color: var(--yellow);
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  font-size: 0.8rem;
}

.education-card {
  max-width: 75rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 2rem 3rem;
  border-left: 4px solid var(--yellow);
  background-image: linear-gradient(
    to right,
    var(--card-background),
    transparent
  );
}

.contact {
  background-image: linear-gradient(var(--background), var(--yellow));
}

.contact-info {
  width: clamp(16rem, 60dvw, 32rem);
  display: flex;
  flex-direction: column;

  border-radius: 20px;
  background-color: var(--card-background);
  padding: 2rem 3rem;
}

.contact-address {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.contact-address li {
  display: flex;
  gap: 2rem;
}

.contact-address li img {
  height: 3rem;
}

.contact-label {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
}

.contact-title {
  font-size: 0.8rem;
  text-transform: uppercase;
  letter-spacing: var(--spacing-eyebrow);
}

.contact-details {
  font-size: 1.2rem;
  font-weight: 700;
}

#email-details::after {
  content: "\2713  Email copied";
  text-transform: uppercase;
  color: var(--accent);
  font-size: 0.8rem;
  padding-left: 1rem;
  display: none;
}

#phone-details::after {
  content: "\2713  Phone Number copied";
  text-transform: uppercase;
  color: var(--accent);
  font-size: 0.8rem;
  padding-left: 1rem;
  display: none;
}

